--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
       font-weight: 400;
       animation: fadeIn 2s ease;
     }
-
+h5 {
+   margin-top: 20px;
+      font-weight: 400;
+      animation: fadeIn 2.5s ease;
+}
     h3 {
   display: inline-block;
   background: linear-gradient(90deg, #794066, #720652);
@@ -84,10 +88,11 @@
 
   <!-- Page Content -->
   <h1>Hello Guys!</h1>
-  <h5>pasasalamat kay jhaydee oxygen</h5>
+  <h5>pasasalamat kay jhaydee ocsillos</h5>
   <h3>Suggestion sa GC now</h3>
   <h3>rants lalagay ko dito G ba?</h3>
   <h3>may bagyo ba o ay bago na?</h3>
 </body>
 </html>
+
 
