--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ h4 {
   <h1>Hello Guys!</h1>
   <h4>pasasalamat kay jhaydee ocsillos</h4>
   <h3>Suggestion sa GC now</h3>
-  <h3>rants lalagay ko dito G ba?</h3>
-  <h3>may bagyo ba o ay bago na?</h3>
+  <h3>Rants lalagay ko dito G ba?</h3>
+  <h3>May bagyo ba o May bago na?</h3>
 </body>
 </html>
 
