--- a/index.html
+++ b/index.html
@@ -1,98 +1,85 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Website</title>
   <style>
-    /* Page Style */
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       background: linear-gradient(135deg, #7b00ff, #f30769);
-      color: rgb(0, 0, 0);
+      color: white;
       text-align: center;
-      height: 120vh;
+      height: 100vh;
       overflow: hidden;
     }
 
     h1 {
-      margin-top: 200px;
-      font-size: 50px;
+      margin-top: 60px;
+      font-size: 40px;
       animation: fadeIn 1.5s ease;
     }
 
     h3 {
-      margin-top: 20px;
-      font-weight: 400;
-      animation: fadeIn 2s ease;
+      display: inline-block;
+      background: linear-gradient(90deg, #794066, #720652);
+      padding: 10px 16px;
+      border-radius: 10px;
+      margin: 10px;
+      cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
-h4 {
-   margin-top: 20px;
-      font-weight: 400;
-      animation: fadeIn 2.5s ease;
-}
-    h3 {
-  display: inline-block;
-  background: linear-gradient(90deg, #794066, #720652);
-  color: rgb(255, 255, 255);
-  padding: 6px 12px;
-  border-radius: 10px;
-  font-weight: 600;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-}
+
+    h3:hover {
+      transform: scale(1.1);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    }
+
+    .page {
+      display: none;
+      animation: fadeIn 0.8s ease;
+    }
+
+    .active {
+      display: block;
+    }
 
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-10px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
-    /* Loading Screen */
-    #loader {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: #111;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      font-size: 24px;
-      z-index: 9999;
-    }
-
-    
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
   </style>
-
-  <script>
-    // Hide loader when page loads
-    window.addEventListener("load", function() {
-      const loader = document.getElementById("loader");
-      loader.style.opacity = "0";
-      setTimeout(() => { loader.style.display = "none"; }, 500);
-    });
-  </script>
 </head>
 
 <body>
-  <!-- Loading Screen -->
-  <div id="loader">
-    <div class="spinner"></div>
-    Loading...
+  <h1>Hello Guys!</h1>
+  <h3 onclick="showPage('suggestions')">Suggestion</h3>
+  <h3 onclick="showPage('rants')">Rants?</h3>
+  <h3 onclick="showPage('news')">relapse?</h3>
+
+  <!-- Hidden pages -->
+  <div id="suggestions" class="page">
+    <h2>Suggestions Page</h2>
+    <p>Lagyan mo ng suggestions dito mag lalagay pako ng button ha</p>
   </div>
 
-  <!-- Page Content -->
-  <h1>Hello Guys!</h1>
-  <h4>pasasalamat kay jhaydee ocsillos</h4>
-  <h3>Suggestion sa GC now</h3>
-  <h3>Rants lalagay ko dito G ba?</h3>
-  <h3>May bagyo ba o May bago na?</h3>
+  <div id="rants" class="page">
+    <h2>Rants Page</h2>
+    <p>Ilagay mo mga rants mo dito
+mag add pako ng message botton</p>
+  </div>
+
+  <div id="news" class="page">
+    <h2>relapse?</h2>
+    <p>May bagyo nga ba o may bago lang?</p>
+  </div>
+
+  <script>
+    function showPage(pageId) {
+      document.querySelectorAll('.page').forEach(p => p.classList.remove('active'))
+      document.getElementById(pageId).classList.add('active')
+    }
+  </script>
 </body>
 </html>
-
-
