--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- Media content (Pictures and Videos) -->
     <div>
       <!-- Picture 1 -->
-      <img src="https://raw.githubusercontent.com/USERNAME/REPO/main/images/pic1.jpg" alt="Picture 1">
+      <img src="received_788197783982826.jpeg" alt="Picture 1">
 
       <!-- Video 1 -->
       <video controls>
