--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </video>
 
       <!-- Picture 2 -->
-      <img src="https://raw.githubusercontent.com/USERNAME/REPO/main/images/pic2.jpg" alt="Picture 2">
+      <img src="received_1301756421488482.jpeg" alt="Picture 2">
 
       <!-- Video 2 -->
       <video controls>
