--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <!-- Video 1 -->
       <video controls>
-        <source src="https://raw.githubusercontent.com/USERNAME/REPO/main/videos/video1.mp4" type="video/mp4">
+        <source src="Messenger_creation_769555919032761.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
 
@@ -98,7 +98,7 @@
 
       <!-- Video 2 -->
       <video controls>
-        <source src="https://raw.githubusercontent.com/USERNAME/REPO/main/videos/video2.mp4" type="video/mp4">
+        <source src="received_1864951504456989.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
