--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
   <!-- Rants Page -->
   <div id="rants" class="page">
-    <h2>Rants Page</h2>
-    <p>Ilagay mo mga rants mo dito. Mag-add pa ako ng message button.</p>
+    <h2>memories Page</h2>
+    <p>MEMORIIEESSSS</p>
     <div>
       <img src="received_788197783982826.jpeg" alt="Picture 1" />
       
