--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Suggestions Page -->
   <div id="suggestions" class="page">
     <h2>Suggestions Page</h2>
-    <p>Lagyan mo ng suggestions dito. Maglalagay pa ako ng button ha.</p>
+    <p>Lagyan mo ng suggestions dito.</p>
 
     <!-- Rant Message Box moved here -->
     <div class="rant-box">
