--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <!-- Navigation Buttons -->
   <div class="nav-buttons">
     <h3 onclick="showPage('suggestions')">Suggestion</h3>
-    <h3 onclick="showPage('rants')">Rants?</h3>
-    <h3 onclick="showPage('news')">Relapse?</h3>
+    <h3 onclick="showPage('rants')">memories</h3>
+    <h3 onclick="showPage('news')">Relapse</h3>
   </div>
 
   <!-- Suggestions Page -->
